# glia

./: .gitignore  Cargo.toml
config/: cfg.toml
resources/shaders/: basic.frag
src/: bus.rs  cfg.rs  exec.rs  framesync.rs  log.rs  main.rs  netting.rs  simulation.rs  system.rs
src/model/: mod.rs  scene.rs
src/model/geom/: tet.rs
src/netting/: collater.rs  connman.rs  mod.rs  parceler.rs
src/render/: main.rs  mod.rs  renderer.rs  task.rs
src/world/: mod.rs
