[package]
name = "glia"
version = "0.1.0"
edition = "2021"

[dependencies.derivative]
version = "2"

[dependencies.base64]
version = "0.22"
[dependencies.rand]
version = "0.8"
[dependencies.chrono]
version = "0.4"

[dependencies.array-init]
version = "2"

[dependencies.mio]
version = "0"
[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.trc]
package = "tracing"
version = "0.1"
[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.p256]
version = "0.13"
features = ["ecdh"]
[dependencies.chacha]
package = "chacha20poly1305"
version = "0.10"
[dependencies.hkdf]
version = "0.12"
[dependencies.sha2]
version = "0.10"

