[package]
name = "glia"
version = "0.1.0"
edition = "2021"

[dependencies.derivative]
version = "2"
[dependencies.thiserror]
version = "1"

[dependencies.serde]
version = "1"
[dependencies.tap]
version = "1"
[dependencies.bytemuck]
version = "1"
[dependencies.base64]
version = "0.22"
[dependencies.rand]
version = "0.8"
[dependencies.chrono]
version = "0.4"
[dependencies.hex]
version = "0.4.3"
[dependencies.na]
package = "nalgebra"
version = "0.32"

[dependencies.bincode]
version = "2.0.0-rc.3"
[dependencies.array-init]
version = "2"

[dependencies.mio]
version = "0"
[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.config]
version = "0.14"
[dependencies.trc]
package = "tracing"
version = "0.1"
[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.p256]
version = "0.13"
features = ["ecdh"]
[dependencies.chacha]
package = "chacha20poly1305"
version = "0.10"
[dependencies.hkdf]
version = "0.12"
[dependencies.sha2]
version = "0.10"

[dependencies.img]
package = "image"
version = "0.24"

# graphics dependencies
[dependencies.winit]
version = "0.30"
default-features = false
# features = ["rwh_06", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]
features = ["rwh_06", "x11"]
[dependencies.raw-window-handle]
version = "0.6"
[dependencies.vulkano]
# version = "0.34"
git = "https://github.com/vulkano-rs/vulkano.git"
[dependencies.vulkano-shaders]
# version = "0.34"
git = "https://github.com/vulkano-rs/vulkano.git"
